// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiSplitPanel accepts panel props 1`] = `
<div
  class="euiPanel euiPanel--primary euiSplitPanel emotion-euiPanel-m-primary"
>
  <div
    aria-label="aria-label"
    class="euiPanel euiPanel--success euiPanel--paddingMedium euiSplitPanel__inner testClass1 testClass2 emotion-euiPanel-grow-none-m-success-euiTestCss"
    data-test-subj="test subject string"
  />
</div>
`;

exports[`EuiSplitPanel inner children are rendered 1`] = `
<div
  class="euiPanel euiPanel--plain euiSplitPanel emotion-euiPanel-m-plain-hasShadow"
>
  <div
    class="euiPanel euiPanel--transparent euiPanel--paddingMedium euiSplitPanel__inner emotion-euiPanel-grow-none-m-transparent"
  />
</div>
`;

exports[`EuiSplitPanel is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiPanel euiPanel--plain euiSplitPanel testClass1 testClass2 emotion-euiPanel-m-plain-hasShadow-euiTestCss"
  data-test-subj="test subject string"
/>
`;

exports[`EuiSplitPanel renders as row 1`] = `
<div
  class="euiPanel euiPanel--plain euiSplitPanel euiSplitPanel--row emotion-euiPanel-m-plain-hasShadow"
/>
`;

exports[`EuiSplitPanel responsive can be changed to different breakpoints 1`] = `
<div
  class="euiPanel euiPanel--plain euiSplitPanel euiSplitPanel-isResponsive emotion-euiPanel-m-plain-hasShadow"
/>
`;

exports[`EuiSplitPanel responsive can be false 1`] = `
<div
  class="euiPanel euiPanel--plain euiSplitPanel emotion-euiPanel-m-plain-hasShadow"
/>
`;

exports[`EuiSplitPanel responsive is rendered at small screens 1`] = `
<div
  class="euiPanel euiPanel--plain euiSplitPanel euiSplitPanel-isResponsive emotion-euiPanel-m-plain-hasShadow"
/>
`;
